# subtractive

./: .gitignore  CMakeLists.txt  README.md  iwyu.imp
.github/workflows/: cmake.yml
cmake/: libsubtractive-flags.cmake  subtractiveConfig.cmake.in
include/: libsubtractive.hpp
include/libsubtractive/: libsubtractive.hpp
scripts/: preinstall_ubuntu-2004.sh
src/: CMakeLists.txt
src/libsubtractive/: CMakeLists.txt  actor.hpp  context.cpp  context.hpp  libsubtractive.pc  machine.cpp  machine.hpp
src/libsubtractive/communication/: CMakeLists.txt  flowcontrol.cpp  flowcontrol.hpp
src/libsubtractive/communication/serial/: CMakeLists.txt  serial.hpp  serial_common.hpp  serial_nonwindows.cpp
src/libsubtractive/communication/usb/: CMakeLists.txt  hotplug.cpp  hotplug.hpp
src/libsubtractive/communication/zmq/: CMakeLists.txt  zeromq_wrapper.cpp  zeromq_wrapper.hpp
src/libsubtractive/protocol/: Grbl.hpp
tests/: CMakeLists.txt  ExampleTest.cpp
